{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 62,
  "lineage": "faa3dfc7-28c9-3b15-597a-c37c960c9d49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "API_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-0cfcc10b460a78113",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-0cfcc10b460a78113",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-061923362de605d1f",
            "private_dns": "ip-10-12-3-163.eu-west-3.compute.internal",
            "private_ip": "10.12.3.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ed948edd95c1a0b9",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046d799a028124f5c",
            "tags": {
              "Name": "API"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b10d277d168e232"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.RDSYS_SG",
            "aws_subnet.API_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BACK",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-0bc3e980c43bc4510",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-0bc3e980c43bc4510",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04687ef0eecc10c75",
            "private_dns": "ip-10-12-2-184.eu-west-3.compute.internal",
            "private_ip": "10.12.2.184",
            "public_dns": "ec2-15-188-75-208.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.75.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-087d12fdff9c090da",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d692f863fac078e",
            "tags": {
              "Name": "BACK"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0affbb695d07daafa"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.GATE_SG",
            "aws_subnet.BACK_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DIF_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-078148604b822aa60",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-078148604b822aa60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05095fe0227c1bc66",
            "private_dns": "ip-10-12-4-185.eu-west-3.compute.internal",
            "private_ip": "10.12.4.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04dd515a4aacd7bd5",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00238ec9553472510",
            "tags": {
              "Name": "DIF"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b10d277d168e232"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.RDSYS_SG",
            "aws_subnet.DIF_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ISO_server_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-0ad7d786a45a4b0cb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-0ad7d786a45a4b0cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba93f125c31d6a28",
            "private_dns": "ip-10-12-1-75.eu-west-3.compute.internal",
            "private_ip": "10.12.1.75",
            "public_dns": "ec2-35-181-7-168.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.7.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0475dd71eac5027ef",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056c3fb57a0a31f8b",
            "tags": {
              "Name": "ISO-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0affbb695d07daafa"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.GATE_SG",
            "aws_subnet.ISO1_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ISO_server_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-060c40b1ef6da1102",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-060c40b1ef6da1102",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c77ee9bdb67001d",
            "private_dns": "ip-10-12-1-245.eu-west-3.compute.internal",
            "private_ip": "10.12.1.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03eddc2056b60a7b2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7c136d0f98fad0f",
            "tags": {
              "Name": "ISO-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b10d277d168e232"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.RDSYS_SG",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PRI_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-0467257a1eba5e275",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-0467257a1eba5e275",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08636824e3524d4b6",
            "private_dns": "ip-10-12-0-118.eu-west-3.compute.internal",
            "private_ip": "10.12.0.118",
            "public_dns": "ec2-35-180-124-177.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.124.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a4ee71a57337ecf3",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005bb4dc75391b2ab",
            "tags": {
              "Name": "PRI-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0affbb695d07daafa"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.GATE_SG",
            "aws_subnet.PRI1_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PRI_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-0bdf130c1e37ab9e8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-0bdf130c1e37ab9e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b4b81118790d5cc6",
            "private_dns": "ip-10-12-0-246.eu-west-3.compute.internal",
            "private_ip": "10.12.0.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-018097e63463c277c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0749f73d5d99becc6",
            "tags": {
              "Name": "PRI-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b10d277d168e232"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.RDSYS_SG",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_webserver_BACK",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c757228751c5335",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-07f0e09e517fac94b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-07f0e09e517fac94b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00abb3d358aa4f580",
            "private_dns": "ip-10-12-2-226.eu-west-3.compute.internal",
            "private_ip": "10.12.2.226",
            "public_dns": "ec2-35-180-172-8.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.172.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-028ca4df2d80d5955",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d692f863fac078e",
            "tags": {
              "Name": "BACK-Nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b10d277d168e232",
              "sg-0affbb695d07daafa"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.GATE_SG",
            "aws_security_group.RDSYS_SG",
            "aws_subnet.BACK_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_webserver_BACK",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-075306ff852e290a5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RDSYS-INSTANCE-PROFILE",
            "id": "i-075306ff852e290a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a24436bb30bdd60",
            "private_dns": "ip-10-12-2-132.eu-west-3.compute.internal",
            "private_ip": "10.12.2.132",
            "public_dns": "ec2-35-180-232-6.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.232.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0651109d63500873d",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d692f863fac078e",
            "tags": {
              "Name": "BACK-IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b10d277d168e232",
              "sg-0affbb695d07daafa"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.GATE_SG",
            "aws_security_group.RDSYS_SG",
            "aws_subnet.BACK_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "RDSYS_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06de3b8f6f71a60be",
            "owner_id": "724852356535",
            "tags": {
              "Name": "RDSYS-IGW"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ISO_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/ISO-ALB/f59f7697e6bd7786",
            "arn_suffix": "app/ISO-ALB/f59f7697e6bd7786",
            "dns_name": "internal-ISO-ALB-236496550.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/ISO-ALB/f59f7697e6bd7786",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ISO-ALB",
            "security_groups": [
              "sg-0d1506a2d4bdace6d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-056c3fb57a0a31f8b"
              },
              {
                "subnet_id": "subnet-0a7c136d0f98fad0f"
              }
            ],
            "subnets": [
              "subnet-056c3fb57a0a31f8b",
              "subnet-0a7c136d0f98fad0f"
            ],
            "tags": {
              "Name": "ISO-ALB"
            },
            "vpc_id": "vpc-0bd248731e6129d37",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.ISO_ALB_SG",
            "aws_subnet.ISO1_PUBLIC_SUBNET",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "PRI_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/PRI-ALB/0cacfa7fd3daffc3",
            "arn_suffix": "app/PRI-ALB/0cacfa7fd3daffc3",
            "dns_name": "internal-PRI-ALB-855946125.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/PRI-ALB/0cacfa7fd3daffc3",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PRI-ALB",
            "security_groups": [
              "sg-0cae894c582af0d95"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005bb4dc75391b2ab"
              },
              {
                "subnet_id": "subnet-0749f73d5d99becc6"
              }
            ],
            "subnets": [
              "subnet-005bb4dc75391b2ab",
              "subnet-0749f73d5d99becc6"
            ],
            "tags": {
              "Name": "PRI-ALB"
            },
            "vpc_id": "vpc-0bd248731e6129d37",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.PRI_ALB_SG",
            "aws_subnet.PRI1_PUBLIC_SUBNET",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ISO_http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/ISO-ALB/f59f7697e6bd7786/46b6fc23017e998e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/ISO-LB-TG/490be15c4c10191a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/ISO-ALB/f59f7697e6bd7786/46b6fc23017e998e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/ISO-ALB/f59f7697e6bd7786",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.ISO_alb",
            "aws_lb_target_group.ISO_TG",
            "aws_security_group.ISO_ALB_SG",
            "aws_subnet.ISO1_PUBLIC_SUBNET",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "PRI_http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/PRI-ALB/0cacfa7fd3daffc3/da15b21e78474822",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/PRI-LB-TG/427a68f4a6a5306a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/PRI-ALB/0cacfa7fd3daffc3/da15b21e78474822",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/PRI-ALB/0cacfa7fd3daffc3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.PRI_alb",
            "aws_lb_target_group.PRI_TG",
            "aws_security_group.PRI_ALB_SG",
            "aws_subnet.PRI1_PUBLIC_SUBNET",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ISO_TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/ISO-LB-TG/490be15c4c10191a",
            "arn_suffix": "targetgroup/ISO-LB-TG/490be15c4c10191a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/ISO-LB-TG/490be15c4c10191a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ISO-LB-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ISO-LB-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "PRI_TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/PRI-LB-TG/427a68f4a6a5306a",
            "arn_suffix": "targetgroup/PRI-LB-TG/427a68f4a6a5306a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/PRI-LB-TG/427a68f4a6a5306a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PRI-LB-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "PRI-LB-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "PRIV_NACL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 32005,
                "to_port": 0
              }
            ],
            "id": "acl-09e75eeb9bb550cd3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 204,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 23,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 23
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 202,
                "to_port": 3389
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 201,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "88.22.118.201/32",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 203,
                "to_port": 0
              }
            ],
            "owner_id": "724852356535",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-00238ec9553472510",
              "subnet-046d799a028124f5c",
              "subnet-0749f73d5d99becc6",
              "subnet-0a7c136d0f98fad0f"
            ],
            "tags": {
              "Name": "BACK-NACL"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_subnet.API_PRIVATE_SUBNET",
            "aws_subnet.DIF_PRIVATE_SUBNET",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "PUBL_NACL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 106,
                "to_port": 0
              }
            ],
            "id": "acl-0e32d94505728209e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 105,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "88.22.118.201/32",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 103,
                "to_port": 0
              }
            ],
            "owner_id": "724852356535",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-005bb4dc75391b2ab",
              "subnet-056c3fb57a0a31f8b",
              "subnet-05d692f863fac078e"
            ],
            "tags": {
              "Name": "BACK-NACL"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_subnet.BACK_PUBLIC_SUBNET",
            "aws_subnet.ISO1_PUBLIC_SUBNET",
            "aws_subnet.PRI1_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "API_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09a3f070844057f3d",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06de3b8f6f71a60be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "API-PRIVATE-RT"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BACK_PUBLIC_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0105d71b00aa41228",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06de3b8f6f71a60be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "BACK-PUBLIC-RT"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DIF_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-006f53dc039a84612",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06de3b8f6f71a60be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DIF-PRIVATE-RT"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ISO1_PUBLIC_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f1db00f40353edc6",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06de3b8f6f71a60be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ISO1-PUBLIC-RT"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ISO2_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a150b9e9f16b618e",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06de3b8f6f71a60be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ISO2-PRIVATE-RT"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRI1_PUBLIC_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b6b95762bf812a77",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06de3b8f6f71a60be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRI1-PUBLIC-RT"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRI2_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06cb412a0088f4518",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06de3b8f6f71a60be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRI2-PRIVATE-RT"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "API_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033047e0fde7c445f",
            "route_table_id": "rtb-09a3f070844057f3d",
            "subnet_id": "subnet-046d799a028124f5c"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.API_PRIVATE_ROUTE",
            "aws_subnet.API_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BACK_PUBLIC_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bccf4c0ee03a99c2",
            "route_table_id": "rtb-0105d71b00aa41228",
            "subnet_id": "subnet-05d692f863fac078e"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.BACK_PUBLIC_ROUTE",
            "aws_subnet.BACK_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DIF_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060c30ac56ed923ee",
            "route_table_id": "rtb-006f53dc039a84612",
            "subnet_id": "subnet-00238ec9553472510"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.DIF_PRIVATE_ROUTE",
            "aws_subnet.DIF_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ISO1_PUBLIC_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060d6cd85225e5c2e",
            "route_table_id": "rtb-0f1db00f40353edc6",
            "subnet_id": "subnet-056c3fb57a0a31f8b"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.ISO1_PUBLIC_ROUTE",
            "aws_subnet.ISO1_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ISO2_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0577aeae53b49c980",
            "route_table_id": "rtb-0a150b9e9f16b618e",
            "subnet_id": "subnet-0a7c136d0f98fad0f"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.ISO2_PRIVATE_ROUTE",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRI1_PUBLIC_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5d7a797398be37f",
            "route_table_id": "rtb-0b6b95762bf812a77",
            "subnet_id": "subnet-005bb4dc75391b2ab"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.PRI1_PUBLIC_ROUTE",
            "aws_subnet.PRI1_PUBLIC_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRI2_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aceca457837e5688",
            "route_table_id": "rtb-06cb412a0088f4518",
            "subnet_id": "subnet-0749f73d5d99becc6"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.PRI2_PRIVATE_ROUTE",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DIF_INGRESS_EFS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-089599e8998a0f405",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089599e8998a0f405",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DIF_INGRESS_EFS",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DIF-EFS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GATE_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-0affbb695d07daafa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0affbb695d07daafa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "GATE-SG",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GATE-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ISO_ALB_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-0d1506a2d4bdace6d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1506a2d4bdace6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ISO_ALB_SG",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ISO-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRI_ALB_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-0cae894c582af0d95",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cae894c582af0d95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "88.22.118.201/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "PRI_ALB_SG",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PRI-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDSYS_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-02b10d277d168e232",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b10d277d168e232",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200531201646283100000002",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DIF-EFS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "API_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-046d799a028124f5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.12.3.128/25",
            "id": "subnet-046d799a028124f5c",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "API-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BACK_PUBLIC_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-05d692f863fac078e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.12.2.128/25",
            "id": "subnet-05d692f863fac078e",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "BACK-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DIF_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-00238ec9553472510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.12.4.128/25",
            "id": "subnet-00238ec9553472510",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "DIF-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ISO1_PUBLIC_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-056c3fb57a0a31f8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.12.1.0/25",
            "id": "subnet-056c3fb57a0a31f8b",
            "map_public_ip_on_launch": true,
            "owner_id": "724852356535",
            "tags": {
              "Name": "ISO1-PUB-SUBNET-AZ"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ISO2_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-0a7c136d0f98fad0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.12.1.128/25",
            "id": "subnet-0a7c136d0f98fad0f",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "ISO2-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRI1_PUBLIC_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-005bb4dc75391b2ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.12.0.0/25",
            "id": "subnet-005bb4dc75391b2ab",
            "map_public_ip_on_launch": true,
            "owner_id": "724852356535",
            "tags": {
              "Name": "PRI1-PUB-SUBNET-AZ"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRI2_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-0749f73d5d99becc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.12.0.128/25",
            "id": "subnet-0749f73d5d99becc6",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "PRI2-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "RDSYS_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:vpc/vpc-0bd248731e6129d37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-037a83cee2b6a8de3",
            "default_route_table_id": "rtb-0267c568f1b4f576d",
            "default_security_group_id": "sg-0d0ad940bc68271a1",
            "dhcp_options_id": "dopt-06938eb8310b77230",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bd248731e6129d37",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0267c568f1b4f576d",
            "owner_id": "724852356535",
            "tags": {
              "Name": "RDSYS-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "API_S3_ENDPOINT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.95.154.0/23",
              "52.95.156.0/24"
            ],
            "id": "vpce-0e572163fc300941c",
            "owner_id": "724852356535",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09a3f070844057f3d"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.API_PRIVATE_ROUTE",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "RDSYS_S3_ENDPOINT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.95.154.0/23",
              "52.95.156.0/24"
            ],
            "id": "vpce-0cbdd6d883a2ce469",
            "owner_id": "724852356535",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b6b95762bf812a77",
              "rtb-0f1db00f40353edc6"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0bd248731e6129d37"
          },
          "dependencies": [
            "aws_internet_gateway.RDSYS_IGW",
            "aws_route_table.ISO1_PUBLIC_ROUTE",
            "aws_route_table.PRI1_PUBLIC_ROUTE",
            "aws_vpc.RDSYS_VPC"
          ]
        }
      ]
    }
  ]
}